<resources>
    <string name="app_name">Daily Quotes Motivation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inspiration">Inspiration</string>
    <string name="success_is">Success is not final, failure is not total. It is the courage to continue that counts.</string>
    <string name="category">Category</string>
    <string name="select_the_area_of_most_suitable_quotes">Select the area of most suitable quotes</string>
    <string name="quotes_name">Quotes</string>
    <string name="setting">Setting</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_app">More Apps (Ad)</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="be_yourself">Be Yourself!</string>
    <string name="category_name">Category Name</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="setting_">Setting</string>
    <string name="privacy_policy_link" translatable="false">https://atonomushubofficial.blogspot.com/2024/10/magnifier-plus-privacy-policy.html</string>
    <string name="more_app_link" translatable="false">https://play.google.com/store/apps/dev?id=7068253360089619762</string>
    <string name="no_launcher">No Launcher</string>
    <string name="winston_s_churchill">Winston S. Churchill</string>
    <string name="no_favourite_list">No Favourite List</string>
    <string name="winston_s_churchill_">Winston S. Churchill</string>
    <string name="rate_now">Rate Now</string>
    <string name="later">Later</string>
    <string name="more">More</string>
    <string name="version_1_1">Version 1.1</string>
    <string name="feedback">Feedback</string>
    <string name="more_options">More Options</string>

</resources>